--- a/styles/style.css
+++ b/styles/style.css
@@ -9,16 +9,18 @@
     text-decoration: none;
     list-style: none;
     scroll-behavior: smooth;
+    font-family: "Noto Sans", sans-serif;
 }
 
 Body {
-
+    background-color: var(--bg-color);
 }
 
 /* CSS Variables */
 :root {
     --dark-color: #000000;
     --link-color: #8987A1;
+    --bg-color: #F5F8FF;
     --descrip-color: rgba(0, 0, 0, 0.5);
     --main-color: #E95A08;
 
@@ -28,9 +30,140 @@ Body {
 }
 
 /* Repeated Styles Start */
+.container {
+    max-width: 1140px;
+    margin: 0 auto;
+}
 
+.section_gap {
+    margin: 120px auto;
+}
+
+.flex {
+    display: flex;
+    align-items: center;
+}
 
 
 /* End Repeated Styles */
 
 
+/* __________Header Area Style__________ */
+.navbar {
+    padding: 20px 0;
+    justify-content: space-between;
+    gap: 48px;
+}
+
+figure img {
+    width: 100%;
+}
+
+.navbar a {
+    color: var(--link-color);
+    font-size: 1rem;
+    font-weight: 500;
+    transition: all .35s ease;
+}
+
+.navbar a:hover {
+    color: var(--dark-color);
+}
+
+.navbar .active, .cart  {
+    font-weight: 600;
+    color: var(--dark-color);
+}
+
+.nav_icon i {
+    font-size: 1.1rem;
+    color: var(--dark-color);
+    transition: all .35s ease;
+}
+
+.nav_icon i:hover {
+    transform: scale(1.05) translateY(-5px);
+}
+
+
+/* __________Banner Section__________ */
+.banner {
+    align-items: end;
+}
+
+.banner_text h1 {
+    color: var(--dark-color);
+    font-size: var(--h1-font);
+    font-weight: 700;
+    line-height: 87px;
+}
+
+.banner_text h1 span {
+    color: var(--main-color);
+}
+
+.banner_text p {
+    max-width: 570px;
+    color: var(--descrip-color);
+    font-size: var(--p-font);
+    font-weight: 400;
+    line-height: 27px;
+    margin-top: 15px;
+    font-family: "Inter", sans-serif;
+}
+.banner_img img {
+    width: 100%;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* __________Responsive Mobile Design__________ */
+@media screen and (max-width: 576px) {
+    /* __________Header Section__________*/
+    .navbar {
+        padding: 0 5px;
+        gap: 0;
+    }
+
+    .navbar .item {
+        display: none;
+    }
+
+    .nav_icon {
+        font-size: 1.4rem;
+        margin-top: 20px;
+    }
+
+    /* __________Banner Section__________ */
+    .banner {
+        flex-direction: column-reverse;
+        margin-top: 30px;
+    }
+
+    .banner_text {
+        padding: 20px;
+    }
+
+    .banner_text h1 {
+        font-size: 2rem;
+        line-height: 40px;
+    }
+
+    .banner_text p {
+        font-size: 1.2rem;
+    }
+}
