--- a/styles/style.css
+++ b/styles/style.css
@@ -44,7 +44,6 @@ Body {
     align-items: center;
 }
 
-
 /* End Repeated Styles */
 
 
@@ -116,6 +115,92 @@ figure img {
 }
 
 
+/* ___________Plants Section__________ */
+
+/* Section_title */
+.section_title {
+    text-align: center;
+    max-width: 888px;
+    margin: 0 auto 50px;
+}
+
+.section_title h2 {
+    color: var(--dark-color);
+    font-size: var(--h2-font);
+    font-weight: 700;
+    line-height: 68px;
+    margin-bottom: 14px;
+}
+
+.section_title h2 span {
+    color: var(--main-color);
+}
+
+.section_title p {
+    color: var(--descrip-color);
+    font-size: 1.2rem;
+}
+
+
+
+/* __________Plants Card__________ */
+.plants_cards {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 30px;
+}
+
+.card {
+    max-width: 270px;
+    border-radius: 10px;
+    text-align: center;
+    cursor: pointer;
+    transition: all .35s ease;
+    font-family: "Inter", sans-serif;
+}
+
+.card:hover {
+    transform: scale(1.02);
+}
+
+.card img {
+    width: 100%;
+    border-radius: 10px 10px 0 0;
+}
+
+
+.card h5 {
+    color: #111111;
+    font-size: var(--p-font);
+    font-weight: 500;
+    line-height: 150%;
+    margin-top: 15px;
+}
+
+.card h4 {
+    color: #111111;
+    font-size: var(--p-font);
+    font-weight: 700;
+    line-height: 150%;
+    margin: 0 0 20px;
+}
+
+.card .btn {
+    width: 100%;
+    color: #fff;
+    background-color: var(--main-color);
+    border: none;
+    font-size: 1rem;
+    font-weight: 600;
+    padding: 15px 50px;
+    cursor: pointer;
+    transition: all .35s ease;
+}
+
+.card .btn:hover {
+    border-radius: 10px;
+}
+
 
 
 
@@ -135,7 +220,7 @@ figure img {
 @media screen and (max-width: 576px) {
     /* __________Header Section__________*/
     .navbar {
-        padding: 0 5px;
+        padding: 10px;
         gap: 0;
     }
 
@@ -145,7 +230,7 @@ figure img {
 
     .nav_icon {
         font-size: 1.4rem;
-        margin-top: 20px;
+        margin-top: 22px;
     }
 
     /* __________Banner Section__________ */
@@ -166,4 +251,33 @@ figure img {
     .banner_text p {
         font-size: 1.2rem;
     }
+
+    /* __________Plants Section__________ */
+    .plants_section {
+        margin: -70px 15px 70px;
+    }
+
+    .plants_cards {
+        grid-template-columns: repeat(2, 1fr);
+        gap: 20px;
+    }
+
+    .card h5, .card h4 {
+        font-size: 1rem;
+    }
+
+    .card .btn {
+        font-size: 0.8rem;
+        padding: 15px 20px;
+    }
+
+    .section_title h2 {
+        font-size: 2rem;
+        line-height: 45px;
+    }
+
+    .section_title p {
+        font-size: 1rem;
+    }
+
 }
